// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the subscription detail component has no next billing 1`] = `
<ul
  className="dITYws"
  role="list"
>
  <li
    className="gIbGvK"
  >
    <span
      className="fRQKF"
    >
      Start date
    </span>
    <span
      className="hBSCLY"
    >
      <span>
        June 01, 2017
      </span>
    </span>
  </li>
  <li
    className="hUNZzs"
  >
    <span
      className="fRQKF"
    >
      Next billing
    </span>
    <span
      className="hBSCLY"
    >
      -
    </span>
  </li>
</ul>
`;

exports[`the subscription detail component matches the snapshot 1`] = `
<ul
  className="dITYws"
  role="list"
>
  <li
    className="gIbGvK"
  >
    <span
      className="fRQKF"
    >
      Start date
    </span>
    <span
      className="hBSCLY"
    >
      <span>
        June 01, 2017
      </span>
    </span>
  </li>
  <li
    className="hUNZzs"
  >
    <span
      className="fRQKF"
    >
      Next billing
    </span>
    <span
      className="hBSCLY"
    >
      <span>
        June 01, 2018
      </span>
    </span>
  </li>
</ul>
`;
